<resources>
    <string name="app_name">Reesit</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="receipts_screen_fab_content_description">add a receipt</string>
    <string name="reimbursement_category_title">Reimbursement</string>
    <string name="drawer_settings_item_title">Settings</string>
    <string name="drawer_log_out_menu_item">Log out</string>
    <string name="drawer_categories_group_title">Categories</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="authentication_password_field_label">Password</string>
    <string name="authentication_email_field_label">Email</string>
    <string name="authentication_log_in_button_text">Log In</string>
    <string name="authentication_no_account_text">No account on Reesit?</string>
    <string name="authentication_sign_up_link_text">Sign up here</string>
    <string name="authentication_confirm_password_field_label">Confirm password</string>
    <string name="authentication_sign_up_button_text">Sign up</string>
    <string name="authentication_already_have_account_text">Already have an account on Reesit?</string>
    <string name="authentication_log_in_link">Log in here</string>
    <string name="authentication_sign_up_title">Sign up for Reesit</string>
    <string name="authentication_log_in_title">Log in to Reesit</string>
    <string name="register_fragment_passwords_not_match_error_message">Passwords do not match</string>
    <string name="register_fragment_error_occurred_during_sign_up">Error occurred while creating account: %1$s</string>
    <string name="register_fragment_invalid_email">Invalid email address!</string>
    <string name="login_fragment_invalid_email">Invalid email address!</string>
    <string name="login_fragment_error_occurred_during_log_in">Error occurred while logging in: %1$s</string>
    <string name="receipt_creation_take_picture_title">Take picture of receipt</string>
    <string name="receipt_creation_choose_receipt_title">Choose picture of receipt from gallery</string>
    <string name="receipt_creation_no_picture_or">or</string>
    <string name="receipts_creation_no_picture_title">Add Receipt</string>
    <string name="receipts_picture_taken_retake_prompt">Retake or reselect picture of receipt</string>
    <string name="receipts_picture_taken_retake_picture_button_text">Retake picture of receipt</string>
    <string name="receipts_picture_taken_rechoose_picture_button_text">Reselect picture of receipt from gallery</string>
    <string name="receipts_picture_taken_process_receipt_button_text">Process Receipt</string>
    <string name="receipt_picture_taken_image_content_description">Picture of receipt</string>
    <string name="receipt_picture_taken_process_receipt_error_message">Error processing receipt. Please try again!</string>
    <string name="settings_page_temp_title">Settings page</string>
    <string name="media_access_permissions_message">This app needs access to your phone\'s media to use receipt pictures from your gallery. Please try again and grant permissions</string>
    <string name="media_access_permissions_dialog_title">Storage permissions</string>
    <string name="media_access_permissions_dialog_cancel_text">Cancel</string>
    <string name="media_access_permissions_dialog_grant_permission_button">Grant permission</string>
    <string name="receipt_creation_final_fragment_toolbar_title">Confirm Receipt Information</string>
    <string name="receipt_creation_final_merchant_edit_text_hint">Merchant name</string>
    <string name="receipt_creation_final_sub_title">Please confirm that the following information from your receipt is correct</string>
    <string name="receipt_creation_final_ref_edit_text_hint">Reference Number</string>
    <string name="center_dot">·</string>
    <string name="receipt_creation_final_date_text_default">Please set date for receipt</string>
    <string name="receipt_creation_final_time_text_default">Please set time for receipt</string>
    <string name="receipt_creation_final_total_amount_field_label">Total amount for receipt</string>
    <string name="receipt_creation_final_date_field_label">Date and time</string>
    <string name="receipt_creation_final_invalid_amount_error_message">Invalid total amount!</string>
    <string name="receipt_creation_final_ref_description">This is a number or alphanumeric series of characters used to uniquely identify your receipt</string>
    <string name="receipt_creation_final_invalid_merchant_error_message">Merchant cannot be empty!</string>
    <string name="dollar_sign">$</string>
    <string name="dollar_sign_format">$ %1$s</string>
    <string name="receipt_creation_final_add_receipt_button_text">Add Receipt</string>
    <string name="receipt_creation_final_get_merchant_suggestions_message">Retrieving merchant suggestions</string>
    <string name="receipt_creation_final_edit_receipt_date_content_desc">Edit receipt date</string>
    <string name="receipt_creation_edit_receipt_time_content_desc">Edit receipt time</string>
    <string name="receipt_creation_final_add_receipt_error_message">Error saving receipt. Please try again!</string>
    <string name="receipts_sort_by_button_text">Sort by</string>
    <string name="receipts_filter_button_text">Filter</string>
    <string name="receipts_get_receipts_error_message">Error encountered while trying to get receipts. Please try again</string>
    <string name="receipt_card_ref_format">Reference #: %1$s</string>
    <string name="receipts_search_view_hint">Search through receipts</string>
    <string name="receipts_search_error">Error encountered while getting search results</string>
    <string name="generic_error_message">An error occurred</string>
    <string name="filter_tostring_amount_format"><![CDATA[Amount: >= $ %1$s,  <= $ %2$s]]></string>
    <string name="filter_tostring_amount_greater_format"><![CDATA[Amount: >= $ %1$s]]></string>
    <string name="filter_tostring_amount_less_format"><![CDATA[Amount: <= $ %1$s]]></string>
    <string name="filter_tostring_tags_format">Tags: %1$s</string>
    <string name="filter_tostring_merchants_format">Merchants: %1$s</string>
    <string name="filter_tostring_date_format">After: %1$s\nBefore: %2$s</string>
    <string name="filter_tostring_date_after_format">After: %1$s</string>
    <string name="filter_tostring_date_before_format">Before: %1$s</string>
    <string name="receipts_no_receipts_message">No receipts!</string>
    <string name="receipts_no_receipt_matching_filter_message">You have no receipts containing the search query: %1$s</string>
    <string name="sort_modal_bottom_sheet_reset_button">Reset</string>
    <string name="receipt_creation_final_amount_edit_text_hint">Total amount on receipt</string>
    <string name="receipt_creation_final_amount_two_dp_error">Currency values should not have more than two decimal places</string>
    <string name="filter_modal_edit_before_date">Edit \'before\' date</string>
    <string name="filter_modal_finish_screen_button_content_desc">Go back to \'receipts\' screen</string>
    <string name="filter_modal_title">Filter</string>
    <string name="filter_modal_amount_title">Total amount on receipt</string>
    <string name="filter_modal_greater_than_label">Greater than:</string>
    <string name="filter_modal_less_than_label">Less than:</string>
    <string name="filter_modal_merchants_title">Merchants</string>
    <string name="filter_modal_merchants_edit_text_hint">CVS Pharmacy</string>
    <string name="filter_modal_date_title">Date on receipt</string>
    <string name="filter_modal_date_after_label">After:</string>
    <string name="filter_modal_date_before_label">Before:</string>
    <string name="filter_modal_no_date_selected_text">No date selected</string>
    <string name="filter_modal_edit_after_date_button_content_desc">Edit \'after\' date</string>
    <string name="filter_modal_save_category_button_text">Save as category</string>
    <string name="filter_modal_apply_filter_button_text">Apply filter</string>
    <string name="filter_too_many_merchants_error_message">Cannot have more than %1$d merchants on a filter</string>
    <string name="filter_invalid_before_after_date_error_message">\'Before\' date cannot be before \'after\' date</string>
    <string name="filter_invalid_greater_less_amount_error_message">\'Greater than\' value cannot be greater than \'less than\' value</string>
    <string name="filter_activity_title">Filter receipts</string>
    <string name="filter_activity_create_category_menu_text">Create category using filter</string>
    <string name="filter_activity_reset_filters_menu_text">Reset filters</string>
    <string name="receipt_creation_final_tag_edit_text_hint">Receipt tag</string>
    <string name="receipt_creation_final_tags_loading_message_text">Loading tags</string>
    <string name="receipt_creation_final_too_many_tags_error_message">A receipt cannot have more than %1$d tags</string>
    <string name="filter_fragment_tags_suggestions_loading_mesage">Retrieving tags</string>
    <string name="filter_fragment_receipt_tag_section_title">Receipt tag</string>
    <string name="category_creation_dialog_ok">Create category</string>
    <string name="category_creation_dialog_cancel">Cancel</string>
    <string name="add_new_category_dialog_title">Add a new category</string>
    <string name="add_new_category_category_name_prompt">What do you want to call this category?</string>
    <string name="add_new_category_category_name_edit_text_hint">e.g Food</string>
    <string name="add_new_category_confirm_category_prompt">Confirm that you want to create the following category:</string>
    <string name="add_new_category_confirm_category_filters_title">Filters:</string>
    <string name="add_new_category_dialog_category_name_negative_button_text">Cancel</string>
    <string name="add_new_category_dialog_category_name_positive_button_text">Add</string>
    <string name="add_new_category_confirm_category_category_name_format">Category name: %1$s</string>
    <string name="add_new_category_dialog_confirm_positive_button_text">Confirm</string>
    <string name="add_new_category_error_message">"An error occurred while creating new category"</string>
    <string name="add_new_category_error_message_format">An error occurred while creating new category: %1$s</string>
    <string name="add_new_category_success_message">New category \'%1$s\' successfully created!</string>
    <string name="add_new_category_dialog_confirm_negative_button_text">Cancel</string>
    <string name="add_new_category_loading_text">Creating category…</string>
    <string name="add_category_category_name_title">Category name:</string>
    <string name="drawer_all_receipts_menu_item_title">All receipts</string>
    <string name="menu_receipt_details_delete_menu_item_title">Delete</string>
    <string name="menu_receipt_details_share_menu_item_title">Share</string>
    <string name="menu_receipt_details_download_menu_item_title">Download</string>
    <string name="not_applicable">N/A</string>
    <string name="receipt_details_datetime_format">%1$s\n%2$s</string>
    <string name="receipt_details_info_update_receipt_button_text">Update receipt</string>
    <string name="update_receipt_toolbar_title">Update receipt</string>
    <string name="receipt_creation_final_update_button_text">Update receipt</string>
    <string name="receipt_creation_final_update_receipt_error_message">Error encountered while updating receipt. Please try again</string>
</resources>