<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.ReceiptsPictureTaken">

        <ImageView
            android:id="@+id/receipt_image_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="56dp"
            android:layout_marginEnd="24dp"
            android:contentDescription="@string/receipt_picture_taken_image_content_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_height="200dp"
            tools:src="@tools:sample/backgrounds/scenic" />

        <Button
            android:id="@+id/process_receipt_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/receipts_picture_taken_process_receipt_button_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/receipt_image_view" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:text="@string/receipts_picture_taken_retake_prompt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/process_receipt_button" />

        <ImageButton
            android:id="@+id/retake_picture_button"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="56dp"
            android:contentDescription="@string/receipts_picture_taken_retake_picture_button_text"
            android:src="@drawable/ic_camera"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/rechoose_picture_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView10"
            app:layout_constraintVertical_bias="0" />

        <ImageButton
            android:contentDescription="@string/receipts_picture_taken_rechoose_picture_button_text"
            android:id="@+id/rechoose_picture_button"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_gallery"
            app:layout_constraintBottom_toBottomOf="@+id/retake_picture_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/retake_picture_button"
            app:layout_constraintTop_toTopOf="@+id/retake_picture_button" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
